--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "dokkaebicentral",
+  "name": "web-data-viz",
   "version": "1.0.0",
-  "description": "<img src=\"https://i.imghippo.com/files/NfUZ1739WZg.png\" style=\"width: 400px\">",
+  "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon --exec node app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Feito pelos desenvolvedores @ São Paulo Tech School / Bandtec Digital School",
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.17.1",
+    "mysql2": "^3.9.4",
+    "nodemon": "^2.0.7",
+    "path": "^0.12.7"
+  }
 }
