--- a/.env.dev
+++ b/.env.dev
@@ -3,9 +3,9 @@ AMBIENTE_PROCESSO=desenvolvimento
 # Configurações de conexão com o banco de dados
 DB_HOST='localhost'
 DB_DATABASE='DokkaebiCentral'
-DB_USER='root'
-DB_PASSWORD='muffin123'
-DB_PORT=3306
+DB_USER='DokkaebiCentral'
+DB_PASSWORD='Muffin#123'
+DB_PORT=3307
 
 # Configurações do servidor de aplicação
 APP_PORT=3333
